Issue #13: Removed ratings and compare buttons, fixed merged-buttons bug (align by center by default; needs to check).

--- a/src/css/product-item-template.css
+++ b/src/css/product-item-template.css
@@ -58,27 +58,24 @@
   display: inline-block;
   min-height: 25px;
 }
-.product-item.wide .body .star-holder {
+/* .product-item.wide .body .star-holder {
   position: absolute;
   right: 20px;
   top: 20px;
-}
+} */
 .product-item.wide .body .excerpt {
   font-size: 13px;
   /* min-height: 63px; */
   line-height: 18px;
 }
 /* Hover */
-.product-item:hover .star-holder {
+/* .product-item:hover .star-holder {
   opacity: 1 !important;
   bottom: 5% !important;
-}
-.product-item:hover .btn-compare {
+} */
+/* .product-item:hover .btn-compare {
   right: 0 !important;
-}
-.product-item:hover .thumb img {
-  /* right: 0!important; */
-}
+} */
 .product-item .head {
   border: 5px solid rgba(0, 0, 0, 0.07);
   border-bottom: 0;
@@ -94,7 +91,7 @@
   transition: all 0.3s ease;
   position: relative;
 }
-.product-item .head .star-holder {
+/* .product-item .head .star-holder {
   position: absolute;
   left: 5%;
   bottom: -100px;
@@ -104,8 +101,8 @@
 }
 .product-item .head .star-holder .star {
   display: inline-block;
-}
-.product-item .head .btn-compare {
+} */
+/* .product-item .head .btn-compare {
   background-color: rgba(50, 50, 50, 0.7);
   background: none\9;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b3323232', endColorstr='#b3323232');
@@ -126,7 +123,7 @@
 }
 .product-item .head .btn-compare:hover {
   background-color: #8bb040;
-}
+} */
 .product-item .head .price {
   position: absolute;
   left: 5%;
