--- a/src/css/product-item.css
+++ b/src/css/product-item.css
@@ -21,14 +21,14 @@
     opacity: 0.9;
   }
 
-  .head .star-holder {
+  /* .head .star-holder {
     background-color: rgba(0, 0, 0, 0.5);
     padding: 2px 8px;
     border-radius: 20px;
     &:hover {
       background-color: var(--secondary-color);
     }
-  }
+  } */
   &.wide {
     .body {
       h3 {
